Added favicon in html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc"
       crossorigin="anonymous"
     />
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
     <!-- Navbar Section -->
